--- a/client/index.html
+++ b/client/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <title>Marginalia</title>
-    <link rel="stylesheet" type="text/css" href="./style.css" />
+    <link rel="stylesheet" type="text/css" href="./styles.css" />
+    <!-- <script src="index.js"></script> -->
   </head>
   <body>
-    <div id="root"></div>
+    <h1>Marginalia</h1>
+    <div id="react"></div>
   </body>
 </html>
