minimum viable product working - added quote functionality

--- a/client/index.html
+++ b/client/index.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <title>Marginalia</title>
-    <link rel="stylesheet" type="text/css" href="./styles.css" />
+    <!-- <script src="../build/bundle.js"></script> -->
   </head>
   <body>
-    <h1>Marginalia</h1>
     <div id="react"></div>
   </body>
 </html>
